objects/Transaction__c.object
<CustomObject>
    <description>Description of Custom Object22 fdfdf 2
CHANGE FOR CM119 description</description>
    <fields>
        <fullName>CHANGE_FOR_CM119_filed__c</fullName>
        <label>CHANGE FOR CM119 filed</label>
        <picklist>
            <picklistValues>
                <fullName>CHANGE FOR CM119 value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE FOR CM119 value 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F1__c</fullName>
        <label>F1</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>CHANGE FOR CM119</description>
        <inlineHelpText>CHANGE FOR CM119 help</inlineHelpText>
        <label>Transaction Date CHANGE FOR CM119 title</label>
        <type>Date</type>
    </fields>
    <label>Transaction CHANGE FOR CM119 label</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>original org</description>
        <label>Vendor chnaged</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DateCheck</fullName>
        <active>true</active>
        <errorConditionFormula>YEAR(  Transaction_Date__c  ) &lt;&gt; YEAR ( TODAY() )</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Year should be the current</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateCheck2</fullName>
        <active>true</active>
        <errorConditionFormula>YEAR(  Transaction_Date__c  ) &lt;&gt; YEAR ( TODAY() )</errorConditionFormula>
        <errorMessage>месага</errorMessage>
    </validationRules>
</CustomObject>